[gd_scene load_steps=6 format=3 uid="uid://dutjtyluty2rm"]

[ext_resource type="Script" path="res://Scripts/ui & inventory/item_slot.gd" id="1_kh5lp"]
[ext_resource type="Texture2D" uid="uid://b5vdpkmm5tsna" path="res://Art/UI/hotbar highlight.png" id="2_7qvc8"]
[ext_resource type="PackedScene" uid="uid://dj4uo1mrdxxha" path="res://Scenes/shadow_sprite.tscn" id="3_1cv6b"]
[ext_resource type="FontFile" uid="uid://c2it3k3fijg8r" path="res://Fonts/numbers PixelRPG outlined.png" id="5_4pmlf"]

[sub_resource type="FontVariation" id="FontVariation_cmbv1"]
base_font = ExtResource("5_4pmlf")
spacing_glyph = -1

[node name="ItemSlot" type="Control"]
custom_minimum_size = Vector2(22, 23)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -298.0
offset_bottom = -157.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_kh5lp")

[node name="Highlight" type="TextureRect" parent="."]
custom_minimum_size = Vector2(22, 23)
layout_mode = 0
texture = ExtResource("2_7qvc8")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(19, 19)
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 22.0
offset_bottom = 23.0

[node name="ShadowedSprite" parent="Control" instance=ExtResource("3_1cv6b")]

[node name="PailFillLevel" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
offset_left = 3.0
offset_top = 17.0
offset_right = 19.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(0, 31)
mouse_filter = 2
color = Color(0.301961, 0.607843, 0.901961, 1)

[node name="HotkeyLabel" type="Label" parent="."]
layout_mode = 2
offset_right = 5.0
offset_bottom = 7.0
theme_override_fonts/font = ExtResource("5_4pmlf")
theme_override_font_sizes/font_size = 7
text = ";"

[node name="ItemAmountLabel" type="Label" parent="."]
custom_minimum_size = Vector2(22, 23)
layout_mode = 0
offset_right = 13.0
offset_bottom = 7.0
theme_override_fonts/font = SubResource("FontVariation_cmbv1")
theme_override_font_sizes/font_size = 7
text = "999"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_right = 23.0
offset_bottom = 23.0
action_mode = 0

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_clicked"]
